--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@msm-lib/create-appointment",
+  "name": "@msm-lib/core",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
